; ModuleID = '/home/carl/AnghaBench/brotli/c/enc/extr_compress_fragment_two_pass.c_RewindBitPosition.c'
source_filename = "/home/carl/AnghaBench/brotli/c/enc/extr_compress_fragment_two_pass.c_RewindBitPosition.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i64*, i32*)* @RewindBitPosition to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @RewindBitPosition(i64 %0, i64* %1, i32* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64* %1, i64** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load i64, i64* %4, align 8
  %10 = and i64 %9, 7
  store i64 %10, i64* %7, align 8
  %11 = load i64, i64* %7, align 8
  %12 = trunc i64 %11 to i32
  %13 = shl i32 1, %12
  %14 = sub i32 %13, 1
  %15 = zext i32 %14 to i64
  store i64 %15, i64* %8, align 8
  %16 = load i64, i64* %8, align 8
  %17 = trunc i64 %16 to i32
  %18 = load i32*, i32** %6, align 8
  %19 = load i64, i64* %4, align 8
  %20 = lshr i64 %19, 3
  %21 = getelementptr inbounds i32, i32* %18, i64 %20
  %22 = load i32, i32* %21, align 4
  %23 = and i32 %22, %17
  store i32 %23, i32* %21, align 4
  %24 = load i64, i64* %4, align 8
  %25 = load i64*, i64** %5, align 8
  store i64 %24, i64* %25, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
